ARCHIVED: Corrected missing borders in archive

--- a/src/sass/_archived.scss
+++ b/src/sass/_archived.scss
@@ -25,6 +25,7 @@
 	p {
 		padding-top: 10px;
 		padding-bottom: 10px;
+		float: none !important;
 	}
 	h2 {
 		background-color: #fd0;
